STSEval/app/static/app/content/site.css
/* ... */
#video-live-indicator {
    position: absolute;
    top: 0.5em;
    left: 1.5em;
    opacity: 90%;
}

.video-controls {
    width: 100% !important;
    position: relative;
    bottom: 40px;
    margin: 0;
    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
    border-radius: 10px;
    padding-bottom: 5px;
}

.btn-event {
    /*border: 1px solid #2489CE {c-bup-border}*/;
    background-color: #373747;
    font-weight: bold;
    color: #ffffff /*{c-bup-color}*/;
    border: 0px;
    border-radius: 0rem !important;
    width:100%;
}

.btn-event-selected {
    font-weight: bold;
    color: #ffffff /*{c-bup-color}*/;
    border: 0px;
    border-radius: 0rem !important;
    width: 100%;
    background-color: #313184;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#313184), to(#8282c4));
    background-image: -webkit-linear-gradient(top, #313184, #8282c4);
    background-image: -moz-linear-gradient(top, #313184, #8282c4);
    background-image: -ms-linear-gradient(top, #313184, #8282c4);
    background-image: -o-linear-gradient(top, #313184, #8282c4);
    background-image: linear-gradient(to bottom, #313184, #8282c4);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#313184, endColorstr=#8282c4);
    font-weight: bold;
    color: #ffffff /*{c-bup-color}*/;
    border: 0px;
}

.status-dot {
    height: 25px;
    width: 25px;
    color: #8e8e8e;
    border-radius: 50%;
    border: 2px solid;
    display: inline-block;
}

.status-dot-small {
    height: 14px;
    width: 14px;
    color: #8e8e8e;
    border-radius: 50%;
    border: 1px solid;
    display: inline-block;
}

.status-dot-red {
    background-color: #ff0000 !important;
}

.status-dot-yellow {
    background-color: #ffcc00 !important;
}

.status-dot-green {
    background-color: #37c837 !important;
}

.status-dot-grey {
    background-color: #8e8e8e !important;
}

.judge-strike {
    text-decoration:line-through;
}

.management-input {
    width: 100% !important;
    max-width:none !important;
}

.management-button {
    width:100px;
    margin-bottom:.5rem;
}
.errorlist {
    color: red;
    list-style-type: none;
    padding-inline-start: 0px;
    margin-bottom:0px !important;
}
.col-25 {
    -ms-flex: 0 0 20%;
    flex: 0 0 20%;
    max-width: 20%;
}

.judge-input {
    width: 98% !important;
    max-width: none !important;
}
.management-button-long {
    width: 175px !important;
    margin-bottom: .5rem;
}

.camera-checkbox {
    list-style-type: none;
    padding-inline-start: 0px;
    margin-bottom: 0px !important;
}

.start-list-athlete {
    border-radius: 1em;
    border: 1px solid black;
    background-color: lightgrey;
    max-width: 400px;
    padding-bottom: .5rem;
    padding-top: .5rem;
    color: black;
    font-weight: 700;
}

.ath-list{
    cursor:pointer
}

.setup-box{
    height:240px;
}

.start-list-scratched {
    text-decoration: line-through;
}

.start-list-completed {
    /*background-color: #ff0000 !important;*/
    color: #8e8e8e;
}

.start-list-red {
    background-color: #ff0000 !important;
}

.live-video {
    max-width: 100%;
    max-height: 500px;
    min-height: 480px;
}

.live-container {
    max-width: 854px;
    max-height: 720px;
    width: 100%;
}

.sponsor-image {
    height:200px;
    max-width: 100%;
}

.scoreboard-section {
    background-color: #4848bd;
    border: 1px solid #353535;
}

.navbar-dark .navbar-nav .nav-link {
    color: rgba(255,255,255,.75);
}

.camera-text{
    cursor:pointer;
}

.camera-text-selected{
    border:1px solid;
}

.coach-fall-container{
    position:absolute;
    top:40%;
    width:100%;
    z-index:103;
    color:black;
    font-weight:bold;
}

.coach-fall-credit {
    color: #017101;
    font-size: 1.3rem;
}

.coach-fall-no-credit {
    color: #ff0000;
    font-size: 1.3rem;
}

.coach-fall-background {
    border-radius: 1rem;
    background-color: #d3d3d3;
    border:2px solid red;
}
.coach-fall-timer {
    font-size:1.3rem;
}

.updates-area {
    background-color: #373747;
    color: #ffffff /*{c-bup-color}*/;
    overflow: auto;
    font-size: .7rem;
    transition: all 2s;
    width: 200px;
    height: 100%;
    z-index: 100;
    max-height:85vh;
}

.update-message {
    padding-bottom: .1rem;
    padding-top: .1rem;
    border-bottom:1px solid;
}

.update-message-header {
    font-size:.75rem;
    font-weight:bold;
}

.update-routine-start {
    cursor:pointer;
}

.updates-area::-webkit-scrollbar {
    width: 10px;
}

/* Track */
.updates-area::-webkit-scrollbar-track {
    background: #f1f1f1;
}

/* Handle */
.updates-area::-webkit-scrollbar-thumb {
    background: #888;
}

/* Handle on hover */
.updates-area::-webkit-scrollbar-thumb:hover {
    background: #555;
}

.spectate_start_list_container {
    height:75px;
    overflow:auto;
}

    .spectate_start_list_container::-webkit-scrollbar {
        width: 10px;
    }

/* Track */
    .spectate_start_list_container::-webkit-scrollbar-track {
        background: #f1f1f1;
    }

/* Handle */
    .spectate_start_list_container::-webkit-scrollbar-thumb {
        background: #888;
    }

    /* Handle on hover */
        .spectate_start_list_container::-webkit-scrollbar-thumb:hover {
            background: #555;
        }

#card-error {
    color: rgb(105, 115, 134);
    text-align: left;
    font-size: 13px;
    line-height: 17px;
    margin-top: 12px;
}

#card-element {
    border-radius: 4px 4px 0 0;
    padding: 12px;
    border: 1px solid rgba(50, 50, 93, 0.1);
    height: 44px;
    width: 100%;
    background: white;
}

.payment-container {
    width: 30vw;
    min-width: 500px;
    align-self: center;
    box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1), 0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
    border-radius: 7px;
    padding: 5px 40px 5px 40px;
}
/* ... */

